UPDATE Stylist alpha 54 ・Up/Down function in try them on

--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -1403,13 +1403,13 @@ i. The laws of the State of California, excluding its conflicts of law rules, go
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Q48-wl-UJx"/>
-        <segue reference="fO7-VD-hGW"/>
-        <segue reference="j8y-ny-OAp"/>
+        <segue reference="z6c-Iv-rJh"/>
+        <segue reference="qXM-AK-tWs"/>
+        <segue reference="vY9-8b-aib"/>
         <segue reference="xnA-Pc-bIb"/>
-        <segue reference="lO1-c6-9JB"/>
-        <segue reference="ElC-ds-RgJ"/>
-        <segue reference="Ie9-er-xeu"/>
-        <segue reference="0Ap-MX-GR1"/>
+        <segue reference="ox0-Se-1I5"/>
+        <segue reference="ZON-hF-NJm"/>
+        <segue reference="n9Z-Lj-SxT"/>
+        <segue reference="t5G-Sf-RKd"/>
     </inferredMetricsTieBreakers>
 </document>
