--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -1405,13 +1405,13 @@ i. The laws of the State of California, excluding its conflicts of law rules, go
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="t5G-Sf-RKd"/>
-        <segue reference="n9Z-Lj-SxT"/>
         <segue reference="AjO-To-pJ2"/>
-        <segue reference="ox0-Se-1I5"/>
-        <segue reference="OFr-Mu-bbx"/>
-        <segue reference="xnA-Pc-bIb"/>
+        <segue reference="n9Z-Lj-SxT"/>
+        <segue reference="t5G-Sf-RKd"/>
         <segue reference="Ie9-er-xeu"/>
-        <segue reference="92p-7F-r2P"/>
+        <segue reference="XKH-ik-kmo"/>
+        <segue reference="vY9-8b-aib"/>
+        <segue reference="qXM-AK-tWs"/>
+        <segue reference="ox0-Se-1I5"/>
     </inferredMetricsTieBreakers>
 </document>
