--- a/Stylist/Tutorial.storyboard
+++ b/Stylist/Tutorial.storyboard
@@ -243,7 +243,67 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qu0-zH-hCt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2119" y="269"/>
+            <point key="canvasLocation" x="2112" y="278"/>
+        </scene>
+        <!--Walkthrough Page View Controller-->
+        <scene sceneID="ABQ-Fp-yte">
+            <objects>
+                <viewController storyboardIdentifier="walk5" id="zjj-4H-SVz" customClass="BWWalkthroughPageViewController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WTQ-Ty-Qfq"/>
+                        <viewControllerLayoutGuide type="bottom" id="6F6-8I-wmw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bMR-G0-95j">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Question?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1Hn-zr-Mgq">
+                                <rect key="frame" x="112" y="39" width="377" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="305" id="2dI-tj-Td5"/>
+                                    <constraint firstAttribute="height" constant="110" id="QQ3-0S-ymg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="89"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionSupport" translatesAutoresizingMaskIntoConstraints="NO" id="3Jk-bo-K5t">
+                                <rect key="frame" x="-49" y="249" width="698" height="331"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="ご質問がございましたら、spica.stylist@gmail.com までお問い合わせください。" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ju4-G9-ci6">
+                                <rect key="frame" x="197" y="139" width="207" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="207" id="CZo-Ef-QgC"/>
+                                    <constraint firstAttribute="height" constant="83" id="sLs-pW-UcK"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.43529412150382996" blue="0.81176471710205078" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="1Hn-zr-Mgq" firstAttribute="top" secondItem="WTQ-Ty-Qfq" secondAttribute="bottom" constant="19" id="1hU-Ej-KCy"/>
+                            <constraint firstItem="3Jk-bo-K5t" firstAttribute="top" secondItem="Ju4-G9-ci6" secondAttribute="bottom" constant="27" id="24I-f5-elh"/>
+                            <constraint firstItem="Ju4-G9-ci6" firstAttribute="centerX" secondItem="1Hn-zr-Mgq" secondAttribute="centerX" id="8Ri-VG-Vc0"/>
+                            <constraint firstItem="3Jk-bo-K5t" firstAttribute="centerX" secondItem="bMR-G0-95j" secondAttribute="centerX" id="B9A-cF-bye"/>
+                            <constraint firstAttribute="bottom" secondItem="3Jk-bo-K5t" secondAttribute="bottom" constant="20" symbolic="YES" id="VVt-03-N9t"/>
+                            <constraint firstItem="Ju4-G9-ci6" firstAttribute="top" secondItem="1Hn-zr-Mgq" secondAttribute="bottom" constant="-10" id="hDB-kg-vQs"/>
+                            <constraint firstItem="3Jk-bo-K5t" firstAttribute="centerX" secondItem="Ju4-G9-ci6" secondAttribute="centerX" id="nPW-eI-EXe"/>
+                            <constraint firstItem="3Jk-bo-K5t" firstAttribute="leading" secondItem="bMR-G0-95j" secondAttribute="leadingMargin" constant="-65" id="qzr-eX-Rgb"/>
+                        </constraints>
+                    </view>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="point" keyPath="speedVariance">
+                            <point key="value" x="0.0" y="0.5"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="string" keyPath="animationType" value="InOut"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="staticTags" value="1,2"/>
+                    </userDefinedRuntimeAttributes>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xwu-2Q-yry" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2783" y="278"/>
         </scene>
         <!--Walkthrough View Controller-->
         <scene sceneID="rSN-qo-iJg">
@@ -327,6 +387,7 @@
         <image name="camera" width="881" height="1784"/>
         <image name="fittingRoom" width="896" height="1804"/>
         <image name="leftarrow" width="100" height="100"/>
+        <image name="questionSupport" width="875" height="1791"/>
         <image name="rightarrow" width="100" height="100"/>
         <image name="trend2" width="876" height="1777"/>
         <image name="trendPull" width="878" height="1783"/>
