UPDATE Stylist alpha 66 ・Fixed textfields

--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -1409,9 +1409,9 @@ i. The laws of the State of California, excluding its conflicts of law rules, go
         <segue reference="n9Z-Lj-SxT"/>
         <segue reference="t5G-Sf-RKd"/>
         <segue reference="Ie9-er-xeu"/>
-        <segue reference="XKH-ik-kmo"/>
+        <segue reference="xnA-Pc-bIb"/>
         <segue reference="vY9-8b-aib"/>
-        <segue reference="qXM-AK-tWs"/>
-        <segue reference="ox0-Se-1I5"/>
+        <segue reference="Q48-wl-UJx"/>
+        <segue reference="j8y-ny-OAp"/>
     </inferredMetricsTieBreakers>
 </document>
